<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WikiCards</string>
    <string name="action_settings">Settings</string>
    <string name="label_learning">Learning</string>
    <string name="label_licenses">Open Source Licenses</string>
    <string name="label_gplv3">GPLv3:</string>
    <string name="label_mit">MIT:</string>
    <string name="label_apache_license_v2">Apache License, Version 2.0 :</string>
    <string name="label_license_WikiCards">WikiCards</string>
    <string name="label_license_wikicards_url">(<a href="http://git.io/DzZMSA">http://git.io/DzZMSA</a>)</string>
    <string name="label_license_flip">flip</string>
    <string name="label_license_flip_url">(<a href="https://github.com/genzeb/flip">https://github.com/genzeb/flip</a>)</string>
    <string name="label_license_picasso">picasso</string>
    <string name="label_license_picasso_url">(<a href="https://github.com/square/picasso">https://github.com/square/picasso</a>)</string>
    <string name="label_license_androidWheel">Android Wheel Control</string>
    <string name="label_license_androidWheel_url">(<a href="http://android-devblog.blogspot.com/2010/05/wheel-ui-contol.html">http://android-devblog.blogspot.com/2010/05/wheel-ui-contol.html</a>)</string>
    <string name="label_license_stickyListHeaders">StickyListHeaders</string>
    <string name="label_license_stickyListHeaders_url">(<a href="https://github.com/emilsjolander/StickyListHeaders">https://github.com/emilsjolander/StickyListHeaders</a>)</string>
    <string name="title_spinner_languages">Languages</string>
    <string name="title_spinner_categories">Categories</string>
    <string name="title_in">In</string>
    <string name="title_settings_activity">Settings of WikiCards</string>
    <string name="button_cardmode">Start to Learn</string>
    <string name="button_starredmode">Starred Words</string>
    <string name="button_downloaddb">Download Offline DB</string>
    <string name="pref_title_license">Open Source Licenses</string>
    <string name="pref_title_blog">Vosie\'s Blog</string>
    <string name="pref_title_others">Others</string>
    <string name="pref_title_cards">WikiCards</string>
    <string name="pref_title_native_tongue">My Native Tongue</string>
    <string name="title_activity_card">Learning Words</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="loading">Loading</string>
    <string name="dialog_title_downloading">Downloading</string>
    <string name="dialog_desc_downloading">Download word. Please wait</string>
    <string name="dialog_title_network_error">Unable to Connect to Internet</string>
    <string name="dialog_desc_network_error">Please check your internet connection and try again.</string>
    <string name="dialog_title_http_error">Connection Error</string>
    <string name="dialog_desc_http_error">Sorry, the connection between your device to our server had some problems. We will check them as soon as possible.</string>
    <string name="dialog_title_internal_error">Error</string>
    <string name="dialog_desc_internal_error">There is something wrong to save the data into your device. We will check them as soon as possible.</string>
    <string name="button_download">Download</string>
    <string name="button_delete">Delete</string>
    <string name="button_options">Options</string>
    <string name="dialog_title_confirm_delete_db">Delete Database</string>
    <string name="dialog_desc_confirm_delete_db">Do you really want to delete the following database?</string>
    <string name="dialog_title_download_offline_db">Download Offline Database</string>
    <string name="title_activity_downloaddb">Download Offline DB</string>
    <string name="dialog_title_option_menu">Options</string>
    <string name="msg_empty_database">Database is empty</string>
    <string name="msg_partial_downloaded">Partial downloaded</string>
    <string name="msg_database_downloaded">Fully downloaded</string>
    <string name="msg_empty_database_unselectable">Unable to use it without Internet connection</string>
    <string name="text_description">Description</string>
    <string name="button_go_to_wiki">Go to Wikipedia</string>
    <string name="imageview_content_description_flag">Flag</string>
    <string name="icon_arrow_right">right</string>
    <string name="icon_arrow_left">left</string>
    <string name="label_card_error_msg">Sorry, We can\'t show this card now.</string>
    <string name="pref_title_changelog">Change Logs</string>
    <string name="pref_title_reportbug">Report Bugs</string>
    <string name="msg_empty_database_unable_to_view">The selected language is empty. We cannot open it for you without Internet connection. Please turn on Internet connection or choose a language with offline database</string>
	<string name="dialog_title_tip">Tip</string>
	<string name="dialog_desc_no_card_to_show">There is no card to show</string>
	<string name="msg_error_to_play">This device cannot play MP3 file. Please check if other player is playing now.</string>
	<string name="button_desc_say_word">read the word</string>
	<string name="button_desc_previous">move to previous word</string>
	<string name="button_desc_next">move to next word</string>
	<string name="button_desc_go_to_wiki">open this word in wikipedia</string>
	<string name="button_desc_star">make this word as starred word</string>
</resources>
