<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_license_level_1"
        android:text="@string/label_gplv3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_license_level_2"
        android:text="@string/label_license_WikiCards"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/url_wikicards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_license_level_2"
        android:text="@string/label_license_wikicards_url"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
