<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:id="@+id/general_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="28dp"
            android:layout_weight="1" >

            <ProgressBar
                android:id="@+id/progressBar_loadingimage"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/imageview_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/imageview_content_description_flag"
                android:visibility="invisible" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:scrollbars="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textview_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/button_go_to_wiki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_go_to_wiki"
            android:textColor="#000" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/error_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textview_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />
    </RelativeLayout>

</FrameLayout>
